--- a/main.html
+++ b/main.html
@@ -5,20 +5,20 @@
 </head>
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="all"><div class="player_one"><h1>My Playlist</h1>
-<a href="https://www.youtube.com/watch?v=kd-6aw99DpA">song1</a>
-<a href="https://www.youtube.com/watch?v=9iIX4PBplAY ">song2</a>
-<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y ">song3</a>
-<a href="https://www.youtube.com/watch?v=puKD3nkB1h4 ">song4</a>
-<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">song5</a>
-	</div>
-	<div class="player_two"><h1>Now Playing</h1>
+	<div class="all"><div class="player_one"><h2>My Playlist</h2>
+<ul style="list-style-type:none">
+	<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA">song1</a></li>
+<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY ">song2</a></li>
+<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y ">song3</a></li>
+<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 ">song4</a></li>
+<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">song5</a></li>
+	</ul></div>
+	<div class="player_two"><h2>Now Playing</h2>
 		<video controls>
-		<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 		</video>
-		
 		<audio controls>
-		<source src="https://www.pagalworld.com.se/files/download/id/64630">
+<source src="https://www.pagalworld.com.se/files/download/id/64630">
 		</audio>
 	</div>
 	</div>
