--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 		</video>
 		<audio controls>
-<source src="https://www.pagalworld.com.se/files/download/id/64630">
+<source src="https://www.pagalworld.com.se/files/download/id/64630" type>
 		</audio>
 	</div>
 	</div>
