--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
 <li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 ">song4</a></li>
 <li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">song5</a></li>
 	</ul></div>
-	<div class="player_two"><h2>Now Playing</h2>
+	<h2>Now Playing</h2>
+		<div class="player_two">
 		<video controls>
 <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 		</video>
