--- a/main.html
+++ b/main.html
@@ -5,15 +5,16 @@
 </head>
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="all"><div class="player_one"><h2>My Playlist</h2>
-<ul style="list-style-type:none">
+	<div class="all"><h1>My Playlist</h1>
+<div class="player_one">
+		<ul style="list-style-type:none">
 	<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">song1</a></li>
 <li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">song2</a></li>
 <li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">song3</a></li>
 <li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">song4</a></li>
 <li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">song5</a></li>
 	</ul></div>
-	<h1>Now Playing</h1>
+	<h2>Now Playing</h2>
 		<div class="player_two">
 		<video controls>
 <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
